Adding top food, drinks, products functionalities